ash-cli/tests/snapshots/real/03-approval/02-decline-selected.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> 请尝试创建 declined-by-tui.txt

● Editing file















○ Waiting for approval · 0m 00s total · ctrl+c to interrupt
                                                                     /policy to change permissions
┌Approval required─────────────────────────────────────────────────────────────────────────────────┐
│the action requires user approval                                                                 │
│File read  ·  <FIXTURE>/profile/worktrees│
│File write  ·  <FIXTURE>/profile/worktree│
│  Approve once                                                                                    │
│> Decline                                                                                         │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘

  Enter to confirm
