ash-cli/tests/snapshots/real/03-approval/04-ask-permissions-details.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> 请创建 approved-by-tui.txt

● Updated file
└─ write_file [call-approve]
   {
     "content": "approved through the real TUI\n",
     "path": "approved-by-tui.txt"
   }
   wrote approved-by-tui.txt
   view full

● 工具已获批准并执行。文件写入完成。












                                                                 /permission to change permissions
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  Space to expand · Enter to view details · Esc to return to input
