ash-cli/tests/snapshots/real/03-approval/07-bypass-final.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> start a session before permission bypass

● BYPASS-SETUP-DONE

> 请直接创建 permission-bypassed.txt

● Updated file

● 权限确认已绕过。文件直接写入完成。















  ▶ bypass permissions on                                            /policy to change permissions
  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  Enter send  ·  shift+tab mode  ·  alt+r effort
