ash-cli/tests/snapshots/real/03-approval/11-sandbox-process-full-details.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]


> 尝试在工作┌── Transcript cell ──────────────────────────────────────────────────[✗]─┐
            │                                                                         │
● Thought   │  Content: shell-command [call-sandbox]                                  │
            │           {                                                             │
● Command fa│             "arguments": [                                              │
└─ shell-com│               "-c",                                                     │
   {        │               "touch ../sandbox-must-not-write.txt 2>&- || { echo       │
     "argume│  'sandbox fixture: operation not permitted' >&2; exit 1; }"             │
       "-c",│             ],                                                          │
       "touc│             "program": "/bin/sh",                                       │not
permitted' >│             "working_directory": "."                                    │
     ],     │           }                                                             │
     "progra│           sandbox denied the action, but the attempt may have produced  │
     "workin│  side effects, so the exact call was not retried; reason: the process   │
   }        │  reported an access restriction; output: sandbox fixture: operation not │
   sandbox d│  permitted                                                              │act call was
not retried;│                                                                         │e: operation
not permitte│                                                                         │
   view full│                                                                         │
            │                                                                         │
● 沙盒拒绝了│                                                                         │
            │                                                                         │
            │                                                                         │
            │  ↑/↓ scroll  ·  Esc to close                                            │permissions
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────
  > Build anything
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario
