ash-cli/tests/snapshots/real/03-approval/permission-menu-shared-copy.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]


            ┌── Permissions ──────────────────────────────────────────────────────[✗]─┐
            │                                                                         │
            │  Auto                                                                 + │
            │  Manual                                                               + │
            │> Bypass permissions                                           Current - │
            │    Skip most approvals; access limits still apply                       │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │  Enter confirm · ←/→ details · Esc close                                │permissions
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────
  > Build anything
  ──────────────────────────────────────────────────────────────────────── Automatic model · Plan
